[package]
name = "twine-solana-geyser"
version = "0.1.0"
edition = "2021"
authors = ["Twine"]
description = "A high-performance Geyser plugin with synchronized airlock pattern"

[dependencies]
# Solana dependencies from agave workspace
solana-sdk = { version = "2.2.2" }
agave-geyser-plugin-interface = { version = "=2.2.18", path = "../agave/geyser-plugin-interface", features = ["geyser-plugin-enhanced-notifications"] }
solana-transaction-status = { version = "=2.2.18", path = "../agave/transaction-status" }
solana-lattice-hash = { version = "=2.2.18", path = "../agave/lattice-hash" }

# Database and async runtime
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10"

# HTTP server for metrics
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# Other dependencies
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"
base58 = "0.2"
bs58 = "0.5"
chrono = "0.4"
config = "0.13"

[dev-dependencies]
env_logger = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []