[package]
name = "twine-solana-geyser"
version = "0.1.0"
edition = "2021"
authors = ["Twine"]
description = "A high-performance Geyser plugin with synchronized airlock pattern"

[dependencies]
# Solana dependencies from agave workspace
solana-sdk = { version = "2.2.2" }
agave-geyser-plugin-interface = { version = "=2.2.18", path = "../agave/geyser-plugin-interface", features = ["geyser-plugin-enhanced-notifications"] }
solana-transaction-status = { version = "=2.2.18", path = "../agave/transaction-status" }
solana-lattice-hash = { version = "=2.2.18", path = "../agave/lattice-hash" }

# Database and async runtime
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"

# HTTP server for metrics
axum = "0.8.4"
reqwest = { version = "=0.12", features = ["json"] }
actix-web = "4"

# Other dependencies
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"
base58 = "0.2"
bs58 = "0.5"
chrono = "0.4"
config = "0.15"
log4rs = "1.2.0"
sysinfo = "0.30.12"

[dev-dependencies]
env_logger = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[patch.crates-io]
agave-geyser-plugin-interface = { version = "=2.2.18", path = "../agave/geyser-plugin-interface", features = ["geyser-plugin-enhanced-notifications"] }
solana-transaction-status = { version = "=2.2.18", path = "../agave/transaction-status" }
solana-lattice-hash = { version = "=2.2.18", path = "../agave/lattice-hash" }